<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Hr.Net</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
	<string name="internet_used">Mobile Usage</string>
	<string name="set_data_plan">Set data plan</string>
	<string name="internet_remaining">Internet Remaining</string>
	<string name="warning_notsetpro_des">Warning! your current data plan isn\'t declare yet, \nplease set data plan first (tap here)</string>
	<string name="set_data_plan_title">your data plan</string>
	<string name="action_set_data_plan">set_data_plan</string>
	<string name="action_clear_data_usage">Reset counter</string>
	<string name="action_clear_data_usage_des">Do you want to reset internet usage conunter?</string>
	<string name="set_data_plan_box_des">enter your data plan in minute or in format (hh:mm)</string>
	<string name="ok">OK</string>
	<string name="cancle">Cancle</string>
	<string name="yes">Yes</string>
	<string name="no">No</string>
	<string name="fail_invalid_input">Failed, Invalid Input</string>
	<string name="applying_pleasewait">Applying...,please wait!</string>
	<string name="notification_setting">TimeCounter Settings</string>
	<string name="notification_counter_none">Not show</string>
	<string name="notification_counter_increase">show time used</string>
	<string name="notification_counter_decrease">show time remain</string>
	<string name="notialwaystype">Time counter</string>
	<string name="timecounter">Time counter</string>
	<string name="noti_setting_timeoutalert">Warning when use too much data </string>
	<string name="noti_setting_timeoutalert_des">alert when have time less than 5 minute from declare package</string>
	<string name="set_mobile_data_preference">Mobile data Magnament</string>
	<string name="set_disconnect_outofpack">Disconnect when out of data plan</string>
	<string name="set_disconnect_outofpack_des">for save your money</string>
	<string name="set_disconnect_dontuse">Disconnect when turn off screen for 10 min</string>
	<string name="set_disconnect_dontuse_des">save your money if you forgot turn off internet.</string>
	<string name="remaining">\u0020remaining</string>
	<string name="outofdataplan">Out of data</string>
	<string name="outofdataplan_des">you use data more than declare dataplan.</string>
	<string name="auto_disconnect_yet">Mobile network Disconnected!</string>
	<string name="auto_disconnect_screenoff_des">Mobile data is turn on while screen off</string>
	<string name="package_nearly_empty">Package nearly empty!</string>
	<string name="package_nearly_empty_des">internet remaining less than 5 min</string>
	<string name="warning">Warning</string>
	<string name="warning_dataplan_override">If you set new data plan it will overwrite old dataplan but not reset time counter. if you buy new data plan please reset time counter by yourslef \n Do you want continue?</string>
	<string name="set_your_data_plan">Set your dataplan</string>
	<string name="usage">Usage</string>
	<string name="datarange">Usage History :</string>
	<string name="last7day">Last 7 day</string>
	<string name="last30day">Last 30 day</string>
	<string name="graph_header">DataUsage (Min/Day)</string>
	<string name="new_update">New Update!</string>
	<string name="update_version">update version : </string>
	<string name="tap_ok_to_download">tap \"OK\" to download.</string>
	<string name="Developer">Developer</string>
	<string name="BugReport">Bug Report</string>
	<string name="SourceCode">Source Code</string>
	<string name="About">About</string>
	<string name="Sourcecode">app\'s sorucecode</string>
	<string name="Pakkapon_Phongthawee">Pakkapon Phongthawee</string>
	<string name="bugreport_url">https://www.facebook.com/ThridLand</string>
	<string name="sourcecode_url">https://www.github.com/pureexe/hrnet</string>
	<string name="minute">min</string>
</resources>
